--- a/css/styles.css
+++ b/css/styles.css
@@ -137,49 +137,25 @@ p.hero {
 	background: rgba(0, 0, 0, .5)
 }
 
-a.button {
+.button {
 	display: inline-block;
 	width: auto;
-	margin-top: 40px;
 	border-radius: 20px;
-	padding: 12px 20px;
+	padding: 10px 20px;
 	font-family: Montserrat, sans-serif;
-	font-size: 1.5em;
+	font-size: 1.3em;
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-align: center;
-}
-
-.hero01 {
-	border: 2px solid transparent;
-	background: #ffD500;
-	color: #000000;
-	transition-property: border-color, background-color, color;
-	transition-duration: 800ms;
-}
-
-.hero01:hover {
-	border: 2px solid #ffD500;
-	background: transparent;
-	color: #ffD500;
-}
-
-.hero02 {
-	margin-left: 40px;
-	border: 2px solid #ffD500;
-	background: transparent;
-	color: #ffD500;
-	transition-property: border-color, background-color, color;
-	transition-duration: 800ms;
-}
-
-.hero02:hover {
-	border: 2px solid transparent;
-	background: #ffD500;
-	color: #000000;
+	cursor: pointer;
 }
 
 #title {
+	position: absolute;
+	top: 0%;
+	right: 0%;
+	bottom: auto;
+	left: 0%;
 	background-color: #ffD500;
 	width: auto;
 	padding: 40px 0px 40px 0px;
@@ -191,6 +167,48 @@ h2.title-text {
 	text-shadow: 0 2px 10px rgba(0, 0, 0, .25);
 }
 
+form {
+	margin-top: 40px;
+}
+
+input.field {
+	padding-left: 10px;
+	height: 40px;
+	width: 300px;
+	font-family: Montserrat, sans-serif;
+	letter-spacing: 1px;
+}
+
+.flex-container-vert {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: flex-start;
+}
+
+.flex-container-horiz {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-content: center;
+}
+
+.submit-button {
+	border: 2px solid transparent;
+	background: #ffD500;
+	color: #000000;
+	transition-property: border-color, background-color, color;
+	transition-duration: 500ms; 
+}
+
+.submit-button:hover {
+	border: 2px solid #ffD500;
+	background: transparent;
+	color: #ffD500;
+}
+
 #features {
+	position: relative;
 	width: auto;
+	height: 900px;
 }
